--- a/app/src/main/res/layout/fragment_answers.xml
+++ b/app/src/main/res/layout/fragment_answers.xml
@@ -14,8 +14,9 @@
     </androidx.recyclerview.widget.RecyclerView>
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/verifier"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:onClick="PrintResults"
+        android:text="Voir mon score" />
 </LinearLayout>
