--- a/app/src/main/res/layout/fragment_questions.xml
+++ b/app/src/main/res/layout/fragment_questions.xml
@@ -9,5 +9,14 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listR"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="667dp" >
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+    <Button
+        android:id="@+id/finish"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="TestFinished"
+        android:text="Terminer le test" />
 </LinearLayout>
