--- a/app/src/main/res/layout/fragment_chapters.xml
+++ b/app/src/main/res/layout/fragment_chapters.xml
@@ -19,6 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="150dp"
+        android:onClick="ClickChapitre1"
         android:text="Chapitre 1" />
 
     <Button
@@ -26,6 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:onClick="ClickChapitre2"
         android:text="Chapitre 2" />
 
     <Button
@@ -33,6 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:onClick="ClickChapitre3"
         android:text="Chapitre 3" />
 
     <Button
@@ -40,5 +43,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:onClick="ClickChapitre4"
         android:text="Chapitre 4" />
 </LinearLayout>
