--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -12,19 +12,19 @@
 
         <TextView
             android:id="@+id/question_title"
-            android:layout_width="203dp"
-            android:layout_height="80dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="36dp"
             android:text="TextView"
-            android:textSize="35sp"
+            android:textSize="25sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.054"
             app:layout_constraintStart_toEndOf="@+id/question_number"
             app:layout_constraintTop_toTopOf="parent" />
 
         <RadioGroup
-            android:layout_width="158dp"
-            android:layout_height="158dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginLeft="24dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -34,23 +34,23 @@
 
             <RadioButton
                 android:id="@+id/radioButton1"
-                android:onClick="btn_click"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="btn_click"
                 android:text="RadioButton" />
 
             <RadioButton
                 android:id="@+id/radioButton2"
-                android:onClick="btn_click"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="btn_click"
                 android:text="RadioButton" />
 
             <RadioButton
                 android:id="@+id/radioButton3"
-                android:onClick="btn_click"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="btn_click"
                 android:text="RadioButton" />
         </RadioGroup>
 
@@ -62,7 +62,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="36dp"
             android:text="TextView"
-            android:textSize="30sp"
+            android:textSize="25sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
