3rd activity done

--- a/app/src/main/res/layout/check_item.xml
+++ b/app/src/main/res/layout/check_item.xml
@@ -22,12 +22,14 @@
     <TextView
 
         android:id="@+id/quest"
-        android:layout_width="398dp"
-        android:layout_height="123dp"
-        android:paddingLeft="10dp"
-        android:paddingTop="20dp"
+        android:layout_width="0dp"
+        android:layout_height="100dp"
+        android:fontFamily="sans-serif-black"
+        android:paddingLeft="20dp"
+        android:paddingTop="15dp"
+        android:paddingRight="10dp"
         android:text="TextView"
-        android:textColor="#A1000000"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -40,10 +42,10 @@
         android:id="@+id/rep"
         android:layout_width="0dp"
         android:layout_height="75dp"
-        android:paddingLeft="10dp"
-        android:paddingTop="20dp"
+        android:paddingLeft="20dp"
+        android:paddingTop="35dp"
         android:text="TextView"
-        android:textColor="#A1000000"
+        android:textColor="#A1F10606"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/quest"
         app:layout_constraintHorizontal_bias="1.0"
