--- a/app/src/main/res/layout/fragment_answers.xml
+++ b/app/src/main/res/layout/fragment_answers.xml
@@ -6,16 +6,11 @@
     android:orientation="vertical"
     >
 
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Button" />
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listR2"
         android:layout_width="match_parent"
-        android:layout_height="563dp">
+        android:layout_height="match_parent"
+        android:layout_marginBottom="100dp">
 
     </androidx.recyclerview.widget.RecyclerView>
 
