--- a/app/src/main/res/layout/check_item.xml
+++ b/app/src/main/res/layout/check_item.xml
@@ -21,7 +21,7 @@
 
     <TextView
 
-        android:id="@+id/quest"
+        android:id="@+id/Recap"
         android:layout_width="0dp"
         android:layout_height="100dp"
         android:fontFamily="sans-serif-black"
@@ -39,7 +39,7 @@
 
     <TextView
 
-        android:id="@+id/rep"
+        android:id="@+id/recap1"
         android:layout_width="0dp"
         android:layout_height="75dp"
         android:paddingLeft="20dp"
@@ -47,10 +47,10 @@
         android:text="TextView"
         android:textColor="#A1F10606"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/quest"
+        app:layout_constraintEnd_toEndOf="@+id/Recap"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/quest"
+        app:layout_constraintTop_toTopOf="@+id/Recap"
         app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
