--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/frameFrag"
-            android:layout_width="404dp"
+            android:layout_width="407dp"
             android:layout_height="611dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -26,29 +26,30 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <Button
-            android:id="@+id/next"
-            android:layout_width="132dp"
-            android:layout_height="44dp"
-            android:layout_marginBottom="124dp"
-            android:background="#00BCD4"
-            android:onClick="nextFunction"
-            android:text="next"
-            app:backgroundTint="#00BCD4"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
-
-        <Button
             android:id="@+id/previous"
-            android:layout_width="wrap_content"
+            android:layout_width="110sp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
             android:layout_marginBottom="124dp"
             android:onClick="previous"
             android:text="previous"
             app:backgroundTint="#00BCD4"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/next"
-            app:layout_constraintHorizontal_bias="0.029"
             app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/next"
+            android:layout_width="110sp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="124dp"
+            android:onClick="nextFunction"
+            android:text="next"
+            app:backgroundTint="#00BCD4"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.908"
+            app:layout_constraintStart_toEndOf="@+id/previous" />
 
         <Button
             android:id="@+id/submit"
