--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -6,6 +6,21 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity2">
 
+    <Button
+        android:id="@+id/stockage"
+        android:layout_width="200sp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:text="Stockage et SqLite"
+        android:textColor="#0B0A0A"
+        app:backgroundTint="#00BCD4"
+        app:layout_constraintBottom_toTopOf="@+id/Intent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.44"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6"
+        app:layout_constraintVertical_bias="0.782" />
+
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
@@ -38,27 +53,13 @@
         android:id="@+id/Intent"
         android:layout_width="200sp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="264dp"
         android:text="Intent"
         android:textColor="#0B0A0A"
         app:backgroundTint="#00BCD4"
-        app:layout_constraintBottom_toTopOf="@+id/stockage"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/stockage"
-        android:layout_width="200sp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="172dp"
-        android:background="#100F0F"
-        android:text="Stockage et Sqlite"
-        android:textColor="#070707"
-        app:backgroundTint="#00BCD4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.44"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
