--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -14,6 +14,8 @@
             android:id="@+id/question_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8sp"
+            android:layout_marginLeft="8sp"
             android:layout_marginTop="92dp"
             android:layout_marginEnd="8sp"
             android:layout_marginRight="8sp"
@@ -29,8 +31,8 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <RadioGroup
-            android:layout_width="140dp"
-            android:layout_height="141dp"
+            android:layout_width="328dp"
+            android:layout_height="122dp"
             android:layout_marginStart="24dp"
             android:layout_marginLeft="24dp"
             app:layout_constraintBottom_toBottomOf="parent"
