--- a/app/src/main/res/layout/recap_item.xml
+++ b/app/src/main/res/layout/recap_item.xml
@@ -22,14 +22,16 @@
     <TextView
 
         android:id="@+id/Recap"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="362dp"
+        android:layout_height="42dp"
         android:fontFamily="sans-serif-black"
-        android:paddingLeft="20dp"
-        android:paddingTop="15dp"
-        android:paddingRight="10dp"
+        android:paddingLeft="8dp"
+        android:paddingTop="5dp"
+        android:paddingRight="20dp"
         android:text="TextView"
         android:textColor="#000000"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.09"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -84,14 +86,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:text="selected value : "
+        android:fontFamily="sans-serif-black"
+        android:text="Votre réponse :"
+        android:textColor="#070707"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/selectedRecap"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="246dp"
+        android:layout_height="19dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginBottom="16dp"
