--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -7,6 +7,32 @@
     tools:context=".MainActivity2">
 
     <Button
+        android:id="@+id/stockage3"
+        android:layout_width="200sp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="74dp"
+        android:text="chap4"
+        android:textColor="#0B0A0A"
+        app:backgroundTint="#00BCD4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.44"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/button" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="200sp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="chap3"
+        android:textColor="#0B0A0A"
+        app:backgroundTint="#00BCD4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.44"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Intent" />
+
+    <Button
         android:id="@+id/stockage"
         android:layout_width="200sp"
         android:layout_height="wrap_content"
@@ -17,9 +43,7 @@
         app:layout_constraintBottom_toTopOf="@+id/Intent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.44"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6"
-        app:layout_constraintVertical_bias="0.993" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView5"
@@ -38,15 +62,14 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="52dp"
-        android:text="Please Select a Chapter to Start the quiz "
+        android:layout_marginTop="64dp"
+        android:text="Select a Chapter to Start the quiz "
         android:textColor="#4CAF50"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/Intent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5"
-        app:layout_constraintVertical_bias="0.127" />
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <Button
         android:id="@+id/Intent"
