--- a/app/src/main/res/layout/check_item.xml
+++ b/app/src/main/res/layout/check_item.xml
@@ -24,6 +24,8 @@
         android:id="@+id/Recap"
         android:layout_width="0dp"
         android:layout_height="100dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
         android:fontFamily="sans-serif-black"
         android:paddingLeft="20dp"
         android:paddingTop="15dp"
@@ -42,6 +44,8 @@
         android:id="@+id/recap1"
         android:layout_width="0dp"
         android:layout_height="75dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
         android:paddingLeft="20dp"
         android:paddingTop="35dp"
         android:text="TextView"
