--- a/app/src/main/res/layout/recap_item.xml
+++ b/app/src/main/res/layout/recap_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="220sp"
+    android:layout_height="250sp"
     android:layout_marginLeft="8dp"
     android:layout_marginTop="5dp"
     android:layout_marginRight="8dp"
@@ -70,12 +70,12 @@
 
         android:id="@+id/recap3"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="30sp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="76dp"
         android:paddingLeft="20dp"
-        android:paddingTop="15dp"
+        android:paddingTop="12dp"
         android:text="TextView"
         android:textColor="#000"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -85,6 +85,8 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
         android:layout_marginBottom="16dp"
         android:fontFamily="sans-serif-black"
         android:text="Votre réponse :"
@@ -94,11 +96,12 @@
 
     <TextView
         android:id="@+id/selectedRecap"
-        android:layout_width="246dp"
-        android:layout_height="19dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_width="244dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginBottom="4dp"
+        android:paddingTop="18sp"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView3" />
